# teste-devops-nw-copy

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-dockerfile.yaml  update-ec2-instance.yaml  update-release.yaml
src/: main.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/.ssh/: teste-devops-nw.pem  teste-devops-nw.pub
terraform/modules/ec2/: main.tf  outputs.tf  variables.tf
terraform/modules/key_pair/: main.tf  outputs.tf  variables.tf
terraform/modules/load_balancer/: main.tf  outputs.tf  variables.tf
terraform/modules/security_group/: main.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
terraform/scripts/: teste-devops-nw.sh
