[tool.poetry]
name = "teste-devops-nw"
version = "0.1.0"
description = ""
authors = ["th1alexandre <github@th1alexandre.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
